Fixes collapsed nav for main app
No longer overrides the style to support the tab accordion.

--- a/src/style/site.css
+++ b/src/style/site.css
@@ -1892,8 +1892,8 @@ hr.ac-table-header {
   display: inline-block;
 }
 
-.navbar-header .icon-bar {
-  background-color:white;
+.tab-actions.navbar-header .icon-bar {
+  background-color: white;
   margin: 5px;
   width: 70%;
   margin-right: 15%;
